--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trafalager</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/fav.png" type="image/x-icon">
     <!-- bootstap file -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Fonts -->
@@ -238,10 +238,69 @@
             </div>
         </section>
         <!-- blank -->
+        <div class="blank d-none d-lg-block" style="height: 150px;"></div>
+        <div class="blank d-block d-lg-none" style="height: 70px;"></div>
+        <!-- blank -->
+
+        <!-- sixth -->
+        <section>
+            <div class="container">
+                <h1 class="h1 text-center mb-4">Check out our latest article</h1>
+                <div class="arrow m-auto"></div>
+                <div class="row">
+                    <div class="row pd pe-0 row-cols-1 row-cols-lg-3 g-5 d-flex justify-content-center align-items-center">
+                        <div class="col m-auto">
+                            <div class="card border-0 shadow-lg rounded-4">
+                                <img src="images/Mask Groupinjection.png" class="card-img-top" alt="...">
+                                <div class="card-body px-5 py-5">
+                                    <h5 class="card-title fw-bold mb-3">Disease detection, check up in the laboratory</h5>
+                                    <p class="card-text text-muted">In this case, the role of the health laboratory is very important to do a disease detection...
+                                        <br><br>
+                                        <a href="#" class="fs-5 fw-bold text-decoration-none">Read more</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card border-0 shadow-lg rounded-4">
+                                <img src="images/Mask Groupresearch.png" class="card-img-top" alt="...">
+                                <div class="card-body px-5 py-5">
+                                    <h5 class="card-title fw-bold mb-3">Herbal medicines that are safe for consumption</h5>
+                                    <p class="card-text text-muted">Herbal medicine is very widely used at this time because of its very good for your health...
+                                        <br><br>
+                                        <a href="#" class="fs-5 fw-bold text-decoration-none">Read more</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card border-0 shadow-lg rounded-4">
+                                <img src="images/Mask Groupbeauty.png" class="card-img-top" alt="...">
+                                <div class="card-body px-5 py-5">
+                                    <h5 class="card-title fw-bold mb-3">Natural care for healthy facial skin, stay safe</h5>
+                                    <p class="card-text text-muted">A healthy lifestyle should start from now and also for your skin health. There are some...
+                                        <br><br>
+                                        <a href="#" class="fs-5 fw-bold text-decoration-none">Read more</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <p class="text-center mt-5">
+                    <button class="btn-btn-outline-primary">View all</button>
+                </p>
+            </div>
+        </section>
+        <!-- blank -->
         <div class="blank d-none d-lg-block" style="height: 80px;"></div>
         <div class="blank d-block d-lg-none" style="height: 50px;"></div>
         <!-- blank -->
     </main>
+    <footer>
+        <p class="text-center text-white bg-primary py-3">©Trafalgar PTY LTD 2020. All rights reserved</p>
+    </footer>
     <script src="js/bootstrap.min.js"></script>
 </body>
 
