--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
                 <h1 class="h1 text-center mb-4">Check out our latest article</h1>
                 <div class="arrow m-auto"></div>
                 <div class="row">
-                    <div class="row pd pe-0 row-cols-1 row-cols-lg-3 g-5 d-flex justify-content-center align-items-center">
-                        <div class="col m-auto">
+                    <div class="row pd row-cols-1 row-cols-lg-3 g-5 d-flex justify-content-center align-items-center">
+                        <div class="col">
                             <div class="card border-0 shadow-lg rounded-4">
                                 <img src="images/Mask Groupinjection.png" class="card-img-top" alt="...">
                                 <div class="card-body px-5 py-5">
